# animated-journey

./: CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: epp_session_6.tex  epp_session_6_pres.tex  task_paper.py
src/epp_session_6/: __init__.py
src/epp_session_6/analysis/: task_analysis.py
src/epp_session_6/data_management/: __init__.py  task_data_management.py
src/epp_session_6/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
