[metadata]
name = epp_session_6
description = EPP Session 6
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sonkematthewes/epp_session_6
author = Silke Kaiser, Hannes Qualo, Clara Schäper, Sönke Matthewes
author_email = s.matthewes@gmail.com
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/sonkematthewes/epp_session_6
    Documentation = https://github.com/sonkematthewes/epp_session_6
    Github = https://github.com/sonkematthewes/epp_session_6
    Tracker = https://github.com/sonkematthewes/epp_session_6/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp_session_6/_version.py
